--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1, h2, h3, h4{
-	font-family: 'Source Code Pro', monospace;
+	font-family: 'Montserrat', sans-serif;
 	color: black;
 }
 
