--- a/Style.css
+++ b/Style.css
@@ -2,8 +2,9 @@ body {
 	background-color: white;
 	color: black;
     	margin: 0;
-	min-height: 100vh;
+	height: 100vh;
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 h1, h2, h3, h4{
