--- a/Style.css
+++ b/Style.css
@@ -8,6 +8,7 @@ body {
 }
 
 h1, h2, h3, h4{
+	margin-top: 30px;
 	font-family: 'Montserrat', sans-serif;
 	color: black;
 }
@@ -21,10 +22,10 @@ p, a, li {
 	width: 499px;
 	height: 499px;
 	margin: auto;
+	padding: 30px;
 }
 
 .container p{
-	margin: 20px 20px 20px 20px;
 	font-size: 0.8rem;
 }
 
