--- a/Style.css
+++ b/Style.css
@@ -28,6 +28,16 @@ a:hover{
 	
 }
 
+h1, h3{
+	margin-bottom: 3px !important;
+}
+
+.instructions{
+	margin-top: 0px !important;
+	padding: 5px !important;
+	font-size: 0.7rem !important;
+}
+
 
 .container{
 	width: 500px;
