--- a/Style.css
+++ b/Style.css
@@ -32,7 +32,7 @@ h1, h3{
 	margin-bottom: 3px !important;
 }
 
-p.instructions{
+.instructions{
 	margin-top: 0px !important;
 	padding: 5px !important;
 	font-size: 0.7rem !important;
